# pico-midi-usb-transport

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/print-notes/: CMakeLists.txt  main.cpp  tusb_config.h
src/: CMakelists.txt  TUSB-MIDI_defs.hpp
